[package]
name = "serde"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.6.4"
bson = { version = "1.2.2", features = ["u2i"] }
rand = "0.8.4"
bincode = "1.3.3"