[package]
name = "adder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cargo doesn’t assume that crates in a workspace will depend on each other,
# so we need to be explicit about the dependency relationships between the crates.
add-one = { path = "../add-one" }
add-two = { path = "../add-two" }